# teledex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish.yml
src/teledex/: cli.py  codex_session.py  config.py  config_tui.py  daemon.py  interactions.py  media.py  opencode_session.py  state.py  telegram_bridge.py  util.py
tests/: test_codex_session.py  test_config.py  test_daemon.py  test_interactions.py  test_state.py  test_util.py
