[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teledex-cli"
version = "0.3.0"
description = "Bridge local Codex or OpenCode CLI sessions to Telegram on macOS with multi-bot support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
faster-whisper = [
  "faster-whisper>=1.1.1",
]

[project.scripts]
teledex = "teledex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
